test/sema/typeck/expr/call/call-expr-infer-type-argument.out
error: no type params allowed
--> call-expr-infer-type-argument.dora:2:5
 | fn f(_callable: Array[Int32]) {
 |     _callable[_](unknown);
       ~~~~~~~~~~~~
 | }
 | 
error: type inference is not supported in this context.
--> call-expr-infer-type-argument.dora:2:15
 | fn f(_callable: Array[Int32]) {
 |     _callable[_](unknown);
                 ~
 | }
 | 
error: unknown identifier `unknown`.
--> call-expr-infer-type-argument.dora:2:18
 | fn f(_callable: Array[Int32]) {
 |     _callable[_](unknown);
                    ~~~~~~~
 | }
 | 
3 errors found.
