test/sema/typeck/expr/call/call-expr-infer-type-argument.dora
fn f(_callable: Array[Int32]) {
    _callable[_](unknown);
}
